--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "diff",
     "image"
   ],
-  "version": "0.3.2",
+  "version": "0.4.2",
   "description": "A jest extension to deal with screenshots and all sorts of images.",
   "main": "dist/index.js",
   "author": "Frederick Gnodtke",
@@ -30,9 +30,7 @@
     "url": "https://github.com/Prior99/jest-screenshot"
   },
   "files": [
-    "index.d.ts",
-    "reporter.js",
-    "./dist"
+    "dist/**/*"
   ],
   "jest": {
     "coverageThreshold": {
